// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BDropdown.vue render the appropritate classe based on the "variant" prop 1`] = `
<div
  class="flex flex-wrap"
>
  <div
    class="w-full px-4"
  >
    <div
      class="relative flex flex-col align-middle w-full"
    >
      <button
        class="font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full focus:ring-4 bg-blue text-white font-normal hover:bg-blue-dark  ring-blue"
        type="button"
      >
        
        Dropdown title
      
      </button>
       
      <div
        class="bg-white text-base z-50 py-2 list-none text-left rounded shadow-lg mt-1 hidden"
        style="min-width: 12rem;"
      />
    </div>
  </div>
</div>
`;

exports[`BDropdown.vue render the appropritate classe based on the "variant" prop 2`] = `
<div
  class="flex flex-wrap"
  variant="primary"
>
  <div
    class="w-full px-4"
  >
    <div
      class="relative flex flex-col align-middle w-full"
    >
      <button
        class="font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full focus:ring-4 bg-blue text-white font-normal hover:bg-blue-dark  ring-blue"
        type="button"
      >
        
        Dropdown title
      
      </button>
       
      <div
        class="bg-white text-base z-50 py-2 list-none text-left rounded shadow-lg mt-1 hidden"
        style="min-width: 12rem;"
      />
    </div>
  </div>
</div>
`;

exports[`BDropdown.vue render the appropritate classe based on the "variant" prop 3`] = `
<div
  class="flex flex-wrap"
  variant="warning"
>
  <div
    class="w-full px-4"
  >
    <div
      class="relative flex flex-col align-middle w-full"
    >
      <button
        class="font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full focus:ring-4 bg-blue text-white font-normal hover:bg-blue-dark  ring-blue"
        type="button"
      >
        
        Dropdown title
      
      </button>
       
      <div
        class="bg-white text-base z-50 py-2 list-none text-left rounded shadow-lg mt-1 hidden"
        style="min-width: 12rem;"
      />
    </div>
  </div>
</div>
`;

exports[`BDropdown.vue render the appropritate classe based on the "variant" prop 4`] = `
<div
  class="flex flex-wrap"
  variant="danger"
>
  <div
    class="w-full px-4"
  >
    <div
      class="relative flex flex-col align-middle w-full"
    >
      <button
        class="font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full focus:ring-4 bg-blue text-white font-normal hover:bg-blue-dark  ring-blue"
        type="button"
      >
        
        Dropdown title
      
      </button>
       
      <div
        class="bg-white text-base z-50 py-2 list-none text-left rounded shadow-lg mt-1 hidden"
        style="min-width: 12rem;"
      />
    </div>
  </div>
</div>
`;

exports[`BDropdown.vue render the appropritate classe based on the "variant" prop 5`] = `
<div
  class="flex flex-wrap"
  variant="success"
>
  <div
    class="w-full px-4"
  >
    <div
      class="relative flex flex-col align-middle w-full"
    >
      <button
        class="font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full font-bold text-sm shadow hover:shadow-lg ease-linear transition-all duration-150 px-6 py-2 rounded outline-none focus:outline-none mr-1 mb-1 capitalize w-full focus:ring-4 bg-blue text-white font-normal hover:bg-blue-dark  ring-blue"
        type="button"
      >
        
        Dropdown title
      
      </button>
       
      <div
        class="bg-white text-base z-50 py-2 list-none text-left rounded shadow-lg mt-1 hidden"
        style="min-width: 12rem;"
      />
    </div>
  </div>
</div>
`;
